<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".RegistroActivity">

        <EditText
            android:id="@+id/NombreRegistro_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombre_TX"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/CorreoRegistro_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Correo_TX"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/PasswordRegistro_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena_TX"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/repPasswordRegistro_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repPasswordRegistro_TX"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/RegistrarseRegistro_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkviolet"
            android:fontFamily="@font/alegreya_sans_sc_black_italic"
            android:text="@string/Registrarse_TX"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>