<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.create.CreateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Nombre_TI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre_TX" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Telefono_TI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefono_TX" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Cantidad_TI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Cantidad_TX" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guardar_TX"
        android:background="@color/darkviolet"
        android:fontFamily="@font/alegreya_sans_sc_black_italic"
        android:textColor="@color/white" />


</LinearLayout>